// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelMatrixMinimap /> should render properly 1`] = `
.emotion-0 {
  opacity: 1;
  position: relative;
  border: 2px solid #808080;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(11, 1fr)/repeat(11, 1fr);
}

.emotion-1 {
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
}

.emotion-2 {
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
}

.emotion-12 {
  padding-bottom: 100%;
  background-color: rgb(215,238,255);
}

.emotion-13 {
  padding-bottom: 100%;
  background-color: rgb(0,69,147);
}

.emotion-23 {
  padding-bottom: 100%;
  background-color: rgb(174,221,255);
}

.emotion-24 {
  padding-bottom: 100%;
  background-color: rgb(0,98,187);
}

.emotion-34 {
  padding-bottom: 100%;
  background-color: rgb(134,205,255);
}

.emotion-35 {
  padding-bottom: 100%;
  background-color: rgb(0,128,227);
}

.emotion-45 {
  padding-bottom: 100%;
  background-color: rgb(93,188,255);
}

.emotion-46 {
  padding-bottom: 100%;
  background-color: rgb(12,154,255);
}

.emotion-56 {
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
}

.emotion-122 {
  position: absolute;
  border-style: solid;
  border-width: 2px;
  border-color: #c92300;
  top: 0;
  left: 0;
  width: 0%;
  height: 100%;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-13"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-23"
  />
  <div
    className="emotion-24"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-34"
  />
  <div
    className="emotion-35"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-45"
  />
  <div
    className="emotion-46"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-56"
  />
  <div
    className="emotion-56"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-46"
  />
  <div
    className="emotion-45"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-35"
  />
  <div
    className="emotion-34"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-24"
  />
  <div
    className="emotion-23"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-13"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-122"
  />
</div>
`;

exports[`<ModelMatrixMinimap /> should render properly when Minimap is hidden 1`] = `
.emotion-0 {
  opacity: 0;
  position: relative;
  border: 2px solid #808080;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(11, 1fr)/repeat(11, 1fr);
}

.emotion-1 {
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
}

.emotion-2 {
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
}

.emotion-12 {
  padding-bottom: 100%;
  background-color: rgb(215,238,255);
}

.emotion-13 {
  padding-bottom: 100%;
  background-color: rgb(0,69,147);
}

.emotion-23 {
  padding-bottom: 100%;
  background-color: rgb(174,221,255);
}

.emotion-24 {
  padding-bottom: 100%;
  background-color: rgb(0,98,187);
}

.emotion-34 {
  padding-bottom: 100%;
  background-color: rgb(134,205,255);
}

.emotion-35 {
  padding-bottom: 100%;
  background-color: rgb(0,128,227);
}

.emotion-45 {
  padding-bottom: 100%;
  background-color: rgb(93,188,255);
}

.emotion-46 {
  padding-bottom: 100%;
  background-color: rgb(12,154,255);
}

.emotion-56 {
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
}

.emotion-122 {
  position: absolute;
  border-style: solid;
  border-width: 2px;
  border-color: #c92300;
  top: 0;
  left: 0;
  width: 0%;
  height: 100%;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-13"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-23"
  />
  <div
    className="emotion-24"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-34"
  />
  <div
    className="emotion-35"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-45"
  />
  <div
    className="emotion-46"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-56"
  />
  <div
    className="emotion-56"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-46"
  />
  <div
    className="emotion-45"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-35"
  />
  <div
    className="emotion-34"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-24"
  />
  <div
    className="emotion-23"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-13"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-2"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-1"
  />
  <div
    className="emotion-122"
  />
</div>
`;
